# pgm-llm-inference-reorganizado

./: .env.example  .gitignore  README.md  prompts.yaml  pyproject.toml
.kiro/specs/pgm-llm-inference/: design.md  requirements.md  tasks.md
src/pgm_llm_inference/: __init__.py  utils.py
src/pgm_llm_inference/core/: __init__.py  config.py  conversion.py  factor_ops.py  ordering.py
src/pgm_llm_inference/evaluation/: __init__.py  metrics.py
src/pgm_llm_inference/experiment/: __init__.py  batch.py  experiment.py  llm_factory.py  sampling.py
src/pgm_llm_inference/inference/: __init__.py  engine.py  postprocessing.py  ve_algorithm.py
src/pgm_llm_inference/io/: __init__.py  loaders.py
src/pgm_llm_inference/logging/: __init__.py  experiment_logger.py
src/pgm_llm_inference/models/: __init__.py  bayesian_network.py  factor.py  variable.py
src/pgm_llm_inference/mpe/: __init__.py  bucket.py  client.py  compile.py  graph.py  infer.py  io.py  metadata_generation.py  prompt_builders.py  reconstruction.py  state_semantics.py  types.py
src/pgm_llm_inference/scripts/analysis/: get_table.py  metrics_3.py  reinference.py
src/pgm_llm_inference/scripts/data_prep/: change_nodes_name.py
src/pgm_llm_inference/scripts/run/: main.py  main_single_run.py  openrouter.csv  test.py
src/pgm_llm_inference/strategies/: __init__.py  base.py  max_product.py  sum_product.py
src/pgm_llm_inference/strategies/llm/: __init__.py  local.py  openai.py
tests/: __init__.py
